<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Honeywell Printer</string>
    <string name="action_settings">Settings</string>

    <!--左侧抽屉 -->
    <string name="drag_item_hw">Honeywell</string>
    <string name="drag_item_hw_printer">Honeywell Printer</string>
    <string name="drag_item_about_Hw">about Honeywell</string>
    <string name="drag_item_update">update</string>

    <!--顶部导航文字 -->
    <string name="tv_top1">MyPrinter</string>
    <string name="tv_top2">视频介绍</string>
    <string name="tv_top3">文字介绍</string>

    <!--底部导航文字 -->
    <string name="tv_bottom1">Home</string>
    <string name="tv_bottom2">search for device</string>
    <string name="tv_bottom3">About APP</string>
    <!--dialog -->
    <string name="exit_dialog_title">are you sure exit？</string>
    <string name="exit_dialog_sure">sure</string>
    <string name="exit_dialog_cancel">cancel</string>

    <string name="link_dialog_select_model">Choose connection mode</string>
    <string name="link_dialog_title">Message</string>
    <string name="link_dialog_wifi">WIFI</string>
    <string name="link_dialog_bt">Blue Tooth</string>

    <string name="save_dialog_config">保存当前的参数配置</string>
    <string name="save_dialog_title">提示</string>
    <string name="save_dialog_sure">确定</string>
    <string name="save_dialog_cancel">取消</string>

    <string name="load_dialog_config">请选择您要加载的配置文件</string>
    <string name="load_dialog_title">提示</string>
    <string name="load_dialog_sure">确定</string>
    <string name="load_dialog_cancel">取消</string>

    <string name="exit_wifi_mode">退出WIFI连接模式？</string>
    <string name="exit_wifi_title">提示</string>
    <string name="exit_wifi_sure">确定</string>
    <string name="exit_wifi_cancel">取消</string>

    <!--Toast-->
    <string name="no_update_toast">this is newest version</string>
    <string name="bluetooth_unable_toast">bluetooth is unable</string>

    <!-- detail before link-->
    <string name="bt_open_wifi">Enable Wifi</string>
    <string name="bt_input_ip_address">Input printer IP address</string>
    <string name="bt_link_device">Connect printer</string>
    <string name="bluetooth_scan_tip">No connected printer, click Connect to start</string>
    <string name="bluetooth_link">Connect</string>
    <string name="bluetooth_linked_device">Connection history </string>
    <!-- detail scan success-->
    <string name="scan_success">Scan succeed</string>
    <string name="bluetooth_address">printer MAC address:</string>
    <string name="bluetooth_onclick_link">click upper address to connect</string>
    <!-- detail linking-->
    <string name="bt_link">connecting to printer ...</string>
    <string name="bt_link_now">connecting ...</string>
    <!-- detail link success-->
    <string name="bt_link_success">Blue tooth connection established. Start with below operations.</string>
    <string name="wifi_link_success">Wifi tooth connection established. Start with below operations.</string>
    <string name="bt_scan_system_info">Printer system information</string>
    <string name="bt_scan_config">scan config</string>
    <string name="bt_set_config">set config</string>
    <string name="bt_one_key_reset">one key reset</string>
    <string name="bt_save_config">save config</string>
    <string name="bt_load_config">load config</string>
    <string name="bt_print_pic">print picture</string>
    <string name="bt_print_config">Print basic configuration page</string>
    <string name="bt_print_wifi_config">Print wifi configuration page</string>
    <string name="bt_medium_check">medium check</string>

</resources>

