<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"

    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/line_unLinked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tab_layout_default_height"
            android:text="@string/bluetooth_scan_tip"
            android:textColor="@color/red" />

        <Button
            android:id="@+id/btn_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/indicator_marginleft"
            android:background="@color/blue_bg"
            android:text="@string/bluetooth_link"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_linked_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tab_layout_default_height"
            android:text="@string/bluetooth_linked_device"
            android:textColor="@color/black" />

        <ListView
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:id="@+id/linked_printer_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line_scan_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tab_layout_default_height"
            android:text="@string/scan_success"
            android:textColor="@color/black" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/tab_layout_default_height"
                android:text="@string/bluetooth_address"
                android:textSize="15dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/device_mac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/tab_layout_default_height"
                android:text="XX:XX:XX:XX"
                android:textColor="@color/lightskyblue"
                android:textSize="20dp" />

            <TextView
                android:layout_marginTop="@dimen/tab_layout_default_height"
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:layout_height="wrap_content"
                android:text="@string/bluetooth_onclick_link" />

        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/line_scaned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_scaned_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tab_layout_default_height"
            android:text="@string/bt_link"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_link_ing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/indicator_marginleft"
            android:background="@color/blue_bg"
            android:text="@string/bt_link_now"
            android:textColor="@color/white" />
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/line_success"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_link_success"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/tab_layout_default_height"
                android:text="@string/bt_link_success"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn_system_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/indicator_marginleft"
                android:background="@color/blue_bg"
                android:text="@string/bt_scan_system_info"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_param_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/indicator_marginleft"
                android:background="@color/blue_bg"
                android:text="@string/bt_scan_config"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_param_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/indicator_marginleft"
                android:background="@color/blue_bg"
                android:text="@string/bt_set_config"
                android:textColor="@color/white"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_restart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/indicator_marginleft"
                android:background="@color/blue_bg"
                android:text="@string/bt_one_key_reset"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_configuration_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/indicator_marginleft"
                android:background="@color/blue_bg"
                android:text="@string/bt_save_config"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_configuration_save_load"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/indicator_marginleft"
                android:background="@color/blue_bg"
                android:text="@string/bt_load_config"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_print_pic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/indicator_marginleft"
                android:background="@color/blue_bg"
                android:text="@string/bt_print_pic"
                android:textColor="@color/white" />
            <Button
                android:id="@+id/btn_print_defalt_pic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/indicator_marginleft"
                android:background="@color/blue_bg"
                android:text="@string/bt_print_config"
                android:textColor="@color/white" />
            <Button
                android:id="@+id/btn_print_wifi_config"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/indicator_marginleft"
                android:background="@color/blue_bg"
                android:text="@string/bt_print_wifi_config"
                android:textColor="@color/white" />
            <Button
                android:id="@+id/btn_print_Medium_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/indicator_marginleft"
                android:background="@color/blue_bg"
                android:text="@string/bt_medium_check"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>
